text alignment and gap correction

--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -160,7 +160,9 @@ address {
     flex-direction: column;
     align-items: left;
     text-align: left;
-    Margin: 200px;
+    Margin-top: 0px;
+    Margin-left: 200px;
+    Margin-right: 200px;
 }
 
 #iceberg {
@@ -184,6 +186,7 @@ address {
     padding: 10px;
     margin-top: 5px;
     background-color: #d9ffd9;
+    text-align: justify;
 }
 
 .arrow {
